Strip comments from sources; add Prerequisites to README
- Remove comments from hand-written Java (SymbolicOptimizer/src, excluding
  generated qasm/ and egg/ parsers) and semantics.py; keep code intact.
  Verified: mvn build + ibmnew synthesis (101 rules) + mvn test-compile.
- README: add Prerequisites section (Docker image + native toolchain:
  JDK 17, Maven, egglog-experimental, Python 3.10 with sympy/numpy/PuLP/qiskit).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DFTQZ27KjM6uF6BcVHm22V